# darling-libplatform

./: CMakeLists.txt  README.md
include/os/: lock_private.h
private/os/: crashlog_private.h
src/: init.c
src/atomics/x86_64/: OSAtomic.S
src/os/: resolver.h  resolver_internal.h
src/setjmp/generic/: sigtramp.c
src/string/generic/: ffsll.c  flsll.c
